CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(md_llvm)     

file(COPY ${CMAKE_SOURCE_DIR}/example/fibonacci.md 
DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

include_directories("F:\\cpplib\\llvm-5.0.0.src\\build\\include" "F:\\cpplib\\llvm-5.0.0.src\\include")
aux_source_directory(./ir src)
aux_source_directory(./parser src)
link_directories("F:\\cpplib\\llvm-5.0.0.src\\build\\Debug\\lib")
add_executable(fibonacci  example/fibonacci.cpp ${src})

target_link_libraries(fibonacci 
LLVMInterpreter.lib
LLVMCoroutines.lib
LLVMLibDriver.lib
LLVMObjectYAML.lib
LLVMCoverage.lib
LLVMDlltoolDriver.lib
LLVMOption.lib
LLVMXCoreDisassembler.lib
LLVMXCoreCodeGen.lib
LLVMXCoreDesc.lib
LLVMXCoreInfo.lib
LLVMXCoreAsmPrinter.lib
LLVMSystemZDisassembler.lib
LLVMSystemZCodeGen.lib
LLVMSystemZAsmParser.lib
LLVMSystemZDesc.lib
LLVMSystemZInfo.lib
LLVMSystemZAsmPrinter.lib
LLVMSparcDisassembler.lib
LLVMSparcCodeGen.lib
LLVMSparcAsmParser.lib
LLVMSparcDesc.lib
LLVMSparcInfo.lib
LLVMSparcAsmPrinter.lib
LLVMPowerPCDisassembler.lib
LLVMPowerPCCodeGen.lib
LLVMPowerPCAsmParser.lib
LLVMPowerPCDesc.lib
LLVMPowerPCInfo.lib
LLVMPowerPCAsmPrinter.lib
LLVMNVPTXCodeGen.lib
LLVMNVPTXDesc.lib
LLVMNVPTXInfo.lib
LLVMNVPTXAsmPrinter.lib
LLVMMSP430CodeGen.lib
LLVMMSP430Desc.lib
LLVMMSP430Info.lib
LLVMMSP430AsmPrinter.lib
LLVMMipsDisassembler.lib
LLVMMipsCodeGen.lib
LLVMMipsAsmParser.lib
LLVMMipsDesc.lib
LLVMMipsInfo.lib
LLVMMipsAsmPrinter.lib
LLVMLanaiDisassembler.lib
LLVMLanaiCodeGen.lib
LLVMLanaiAsmParser.lib
LLVMLanaiDesc.lib
LLVMLanaiAsmPrinter.lib
LLVMLanaiInfo.lib
LLVMHexagonDisassembler.lib
LLVMHexagonCodeGen.lib
LLVMHexagonAsmParser.lib
LLVMHexagonDesc.lib
LLVMHexagonInfo.lib
LLVMBPFDisassembler.lib
LLVMBPFCodeGen.lib
LLVMBPFDesc.lib
LLVMBPFInfo.lib
LLVMBPFAsmPrinter.lib
LLVMARMDisassembler.lib
LLVMARMCodeGen.lib
LLVMARMAsmParser.lib
LLVMARMDesc.lib
LLVMARMInfo.lib
LLVMARMAsmPrinter.lib
LLVMAMDGPUDisassembler.lib
LLVMAMDGPUCodeGen.lib
LLVMAMDGPUAsmParser.lib
LLVMAMDGPUDesc.lib
LLVMAMDGPUInfo.lib
LLVMAMDGPUAsmPrinter.lib
LLVMAMDGPUUtils.lib
LLVMAArch64Disassembler.lib
LLVMAArch64CodeGen.lib
LLVMAArch64AsmParser.lib
LLVMAArch64Desc.lib
LLVMAArch64Info.lib
LLVMAArch64AsmPrinter.lib
LLVMAArch64Utils.lib
LLVMOrcJIT.lib
LLVMMIRParser.lib
LLVMLTO.lib
LLVMPasses.lib
LLVMObjCARCOpts.lib
LLVMipo.lib
LLVMInstrumentation.lib
LLVMVectorize.lib
LLVMLinker.lib
LLVMIRReader.lib
LLVMAsmParser.lib
LLVMSymbolize.lib
LLVMDebugInfoPDB.lib
LLVMDebugInfoDWARF.lib
LLVMLineEditor.lib
LLVMTableGen.lib
LLVMX86Disassembler.lib
LLVMX86AsmParser.lib
LLVMX86CodeGen.lib
LLVMGlobalISel.lib
LLVMSelectionDAG.lib
LLVMAsmPrinter.lib
LLVMDebugInfoCodeView.lib
LLVMDebugInfoMSF.lib
LLVMCodeGen.lib
LLVMScalarOpts.lib
LLVMInstCombine.lib
LLVMTransformUtils.lib
LLVMBitWriter.lib
LLVMX86Desc.lib
LLVMMCDisassembler.lib
LLVMX86Info.lib
LLVMX86AsmPrinter.lib
LLVMX86Utils.lib
LLVMMCJIT.lib
LLVMExecutionEngine.lib
LLVMTarget.lib
LLVMAnalysis.lib
LLVMProfileData.lib
LLVMRuntimeDyld.lib
LLVMObject.lib
LLVMMCParser.lib
LLVMBitReader.lib
LLVMMC.lib
LLVMCore.lib
LLVMBinaryFormat.lib
LLVMSupport.lib
LLVMDemangle.lib)